--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 2.8)
 project(Genetic_Algorithm_IO)
 
-set(CMAKE_CXX_STANDARD 14)
+if (CMAKE_VERSION VERSION_LESS "3.1")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+else ()
+    set (CMAKE_CXX_STANDARD 14)
+endif ()
 
 find_package(MPI REQUIRED)
 include_directories(${MPI_INCLUDE_PATH})
